// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > cjs dts output 1`] = `
"// @ts-ignore
test;
export { test2, test3, test4, test5 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    export const test3 = "this should be in final bundle";
    export const test4 = "this should be in final bundle";
    export const test5 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
const test3 = "this should be in final bundle";
const test4 = "this should be in final bundle";
const test5 = "this should be in final bundle";
//#endregion
exports.default = test;
exports.test2 = test2;
exports.test3 = test3;
exports.test4 = test4;
exports.test5 = test5;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > dts output 1`] = `
"// @ts-ignore
test;
export { test2, test3, test4, test5 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    export const test3 = "this should be in final bundle";
    export const test4 = "this should be in final bundle";
    export const test5 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > mjs dts output 1`] = `
"declare const test: () => string;
declare const test2 = "this should be in final bundle";
declare const test3 = "this should be in final bundle";
declare const test4 = "this should be in final bundle";
declare const test5 = "this should be in final bundle";
export { test as default, test2, test3, test4, test5 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with multi named export' correctly when cjsInterop > mjs output 1`] = `
"//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
const test3 = "this should be in final bundle";
const test4 = "this should be in final bundle";
const test5 = "this should be in final bundle";
//#endregion
export { test as default, test2, test3, test4, test5 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > cjs dts output 1`] = `
"// @ts-ignore
test;
export { test2 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
//#endregion
exports.default = test;
exports.test2 = test2;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > dts output 1`] = `
"// @ts-ignore
test;
export { test2 };
declare namespace test {
    export const test: () => string;
    export const test2 = "this should be in final bundle";
    import _default = test;
    export { _default as default };
}
export = test;
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > mjs dts output 1`] = `
"declare const test: () => string;
declare const test2 = "this should be in final bundle";
export { test as default, test2 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export with named export' correctly when cjsInterop > mjs output 1`] = `
"//#region src/index.ts
const test = () => {
	return "this should be in final bundle";
};
const test2 = "this should be in final bundle";
//#endregion
export { test as default, test2 };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export' correctly and dont transform dts when cjsInterop > mjs output 1`] = `
"const test = () => "this should be in final bundle";

export { test as default };
"
`;

exports[`packem node exports > cjs-interop > should output 'default export' correctly and dont transform dts when cjsInterop > cjs output 1`] = `
"const test = () => "this should be in final bundle";

module.exports = test;
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > package.mjs output 1`] = `
"const packageA = () => "This is a named export";
const d = "This is a default export";

export { d as default, packageA };
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > index.mjs output 1`] = `
"import { packageA } from './package.mjs';
export { packageA };
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > package.cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
const packageA = () => "This is a named export";
const d = "This is a default export";

exports.default = d;
exports.packageA = packageA;
"
`;

exports[`packem node exports > should generate correct chunks names, when chunk per export is generated > index.cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const require_package = require('./package.cjs');
exports.packageA = require_package.packageA;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > cjs dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > cjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
module.exports = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > mjs dts output 1`] = `
"declare const test = "test content";
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension > mjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > cjs dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > cjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
module.exports = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > dts output 1`] = `
"declare const test = "test content";
export = test;
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > mjs dts output 1`] = `
"declare const test = "test content";
export { test as default };
"
`;

exports[`packem node exports > should only find the correct export file, if files with the same name exist but with different extension - case 2 > mjs output 1`] = `
"//#region src/index.ts
const test = "test content";
//#endregion
export { test as default };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > cjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.ts
var Parent = class {
	constructor() {}
};
var Feature = class {
	constructor() {}
};
var Child = class extends Parent {
	constructor() {
		console.log("before");
		super();
		this.feature = new Feature();
		console.log("after");
	}
};
//#endregion
exports.Child = Child;
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > mjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly > mjs output 1`] = `
"//#region src/index.ts
var Parent = class {
	constructor() {}
};
var Feature = class {
	constructor() {}
};
var Child = class extends Parent {
	constructor() {
		console.log("before");
		super();
		this.feature = new Feature();
		console.log("after");
	}
};
//#endregion
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > cjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > cjs output 1`] = `
"var g = Object.defineProperty;
var u = (e, r) => g(e, "name", {
	value: r,
	configurable: !0
});
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
var b = Object.defineProperty, t = u((e, r) => b(e, "name", {
	value: r,
	configurable: !0
}), "o$1"), h = Object.create, i = Object.defineProperty;
t((e, r) => i(e, "name", {
	value: r,
	configurable: !0
}), "__name");
var P = Object.getOwnPropertyDescriptor, f = Object.getOwnPropertyNames, O = Object.getPrototypeOf, d = Object.prototype.hasOwnProperty;
t((e, r) => function() {
	return e && (r = (0, e[f(e)[0]])(e = 0)), r;
}, "__esm");
t((e, r) => () => (e && (r = e(e = 0)), r), "__esmMin");
t((e, r) => function() {
	return r || ((0, e[f(e)[0]])((r = { exports: {} }).exports, r), e = null), r.exports;
}, "__commonJS");
t((e, r) => () => (r || (e((r = { exports: {} }).exports, r), e = null), r.exports), "__commonJSMin");
t((e, r) => {
	let o = {};
	for (var a in e) i(o, a, {
		get: e[a],
		enumerable: !0
	});
	return r || i(o, Symbol.toStringTag, { value: "Module" }), o;
}, "__exportAll");
var v = t((e, r, o, a) => {
	if (r && typeof r == "object" || typeof r == "function") for (var l = f(r), n = 0, s = l.length, _; n < s; n++) _ = l[n], !d.call(e, _) && _ !== o && i(e, _, {
		get: ((c) => r[c]).bind(null, _),
		enumerable: !(a = P(r, _)) || a.enumerable
	});
	return e;
}, "__copyProps");
t((e, r, o) => (v(e, r, "default"), o && v(o, r, "default")), "__reExport");
t((e, r, o) => (o = e != null ? h(O(e)) : {}, v(r || !e || !e.__esModule ? i(o, "default", {
	value: e,
	enumerable: !0
}) : o, e)), "__toESM");
t((e) => d.call(e, "module.exports") ? e["module.exports"] : v(i({}, "__esModule", { value: !0 }), e), "__toCommonJS");
t((e) => new Uint8Array(Buffer.from(e, "base64")), "__toBinaryNode");
(() => {
	for (var e = new Uint8Array(128), r = 0; r < 64; r++) e[r < 26 ? r + 65 : r < 52 ? r + 71 : r < 62 ? r - 4 : r * 4 - 205] = r;
	return (o) => {
		for (var a = o.length, l = new Uint8Array((a - (o[a - 1] == "=") - (o[a - 2] == "=")) * 3 / 4 | 0), n = 0, s = 0; n < a;) {
			var _ = e[o.charCodeAt(n++)], c = e[o.charCodeAt(n++)], m = e[o.charCodeAt(n++)], y = e[o.charCodeAt(n++)];
			l[s++] = _ << 2 | c >> 4, l[s++] = c << 4 | m >> 2, l[s++] = m << 6 | y;
		}
		return l;
	};
})();
((e) => typeof require < "u" ? require : typeof Proxy < "u" ? new Proxy(e, { get: t((r, o) => (typeof require < "u" ? require : r)[o], "get") }) : e)(function(e) {
	if (typeof require < "u") return require.apply(this, arguments);
	throw Error("Calling \`require\` for \\"" + e + "\\" in an environment that doesn't expose the \`require\` function. See https://rolldown.rs/in-depth/bundling-cjs#require-external-modules for more details.");
});
var x = Object.defineProperty, p = u((e, r) => x(e, "name", {
	value: r,
	configurable: !0
}), "o"), w = class {
	static {
		u(this, "t");
	}
	static {
		p(this, "Parent");
	}
	constructor() {}
}, S = class {
	static {
		u(this, "c");
	}
	static {
		p(this, "Feature");
	}
	constructor() {}
}, j = class extends w {
	static {
		u(this, "Child");
	}
	static {
		p(this, "Child");
	}
	constructor() {
		this.feature = new S(), console.log("before"), super(), console.log("after");
	}
};
exports.Child = j;

//# sourceMappingURL=index.cjs.map"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > mjs dts output 1`] = `
"declare class Parent {
  constructor();
}
declare class Feature {
  constructor();
}
declare class Child extends Parent {
  feature: Feature;
  constructor();
}
export { Child };
"
`;

exports[`packem node exports > should output 'class' with 'extends correctly when minify is used > mjs output 1`] = `
"var g = Object.defineProperty;
var u = (e, r) => g(e, "name", {
	value: r,
	configurable: !0
}), b = Object.defineProperty, t = u((e, r) => b(e, "name", {
	value: r,
	configurable: !0
}), "o$1"), h = Object.create, i = Object.defineProperty;
t((e, r) => i(e, "name", {
	value: r,
	configurable: !0
}), "__name");
var x = Object.getOwnPropertyDescriptor, v = Object.getOwnPropertyNames, P = Object.getPrototypeOf, d = Object.prototype.hasOwnProperty;
t((e, r) => function() {
	return e && (r = (0, e[v(e)[0]])(e = 0)), r;
}, "__esm");
t((e, r) => () => (e && (r = e(e = 0)), r), "__esmMin");
t((e, r) => function() {
	return r || ((0, e[v(e)[0]])((r = { exports: {} }).exports, r), e = null), r.exports;
}, "__commonJS");
t((e, r) => () => (r || (e((r = { exports: {} }).exports, r), e = null), r.exports), "__commonJSMin");
t((e, r) => {
	let o = {};
	for (var a in e) i(o, a, {
		get: e[a],
		enumerable: !0
	});
	return r || i(o, Symbol.toStringTag, { value: "Module" }), o;
}, "__exportAll");
var p = t((e, r, o, a) => {
	if (r && typeof r == "object" || typeof r == "function") for (var l = v(r), n = 0, s = l.length, _; n < s; n++) _ = l[n], !d.call(e, _) && _ !== o && i(e, _, {
		get: ((c) => r[c]).bind(null, _),
		enumerable: !(a = x(r, _)) || a.enumerable
	});
	return e;
}, "__copyProps");
t((e, r, o) => (p(e, r, "default"), o && p(o, r, "default")), "__reExport");
t((e, r, o) => (o = e != null ? h(P(e)) : {}, p(r || !e || !e.__esModule ? i(o, "default", {
	value: e,
	enumerable: !0
}) : o, e)), "__toESM");
t((e) => d.call(e, "module.exports") ? e["module.exports"] : p(i({}, "__esModule", { value: !0 }), e), "__toCommonJS");
t((e) => new Uint8Array(Buffer.from(e, "base64")), "__toBinaryNode");
(() => {
	for (var e = new Uint8Array(128), r = 0; r < 64; r++) e[r < 26 ? r + 65 : r < 52 ? r + 71 : r < 62 ? r - 4 : r * 4 - 205] = r;
	return (o) => {
		for (var a = o.length, l = new Uint8Array((a - (o[a - 1] == "=") - (o[a - 2] == "=")) * 3 / 4 | 0), n = 0, s = 0; n < a;) {
			var _ = e[o.charCodeAt(n++)], c = e[o.charCodeAt(n++)], m = e[o.charCodeAt(n++)], y = e[o.charCodeAt(n++)];
			l[s++] = _ << 2 | c >> 4, l[s++] = c << 4 | m >> 2, l[s++] = m << 6 | y;
		}
		return l;
	};
})();
((e) => typeof require < "u" ? require : typeof Proxy < "u" ? new Proxy(e, { get: t((r, o) => (typeof require < "u" ? require : r)[o], "get") }) : e)(function(e) {
	if (typeof require < "u") return require.apply(this, arguments);
	throw Error("Calling \`require\` for \\"" + e + "\\" in an environment that doesn't expose the \`require\` function. See https://rolldown.rs/in-depth/bundling-cjs#require-external-modules for more details.");
});
var O = Object.defineProperty, f = u((e, r) => O(e, "name", {
	value: r,
	configurable: !0
}), "o"), w = class {
	static {
		u(this, "t");
	}
	static {
		f(this, "Parent");
	}
	constructor() {}
}, S = class {
	static {
		u(this, "c");
	}
	static {
		f(this, "Feature");
	}
	constructor() {}
}, $ = class extends w {
	static {
		u(this, "Child");
	}
	static {
		f(this, "Child");
	}
	constructor() {
		this.feature = new S(), console.log("before"), super(), console.log("after");
	}
};
export { $ as Child };

//# sourceMappingURL=index.mjs.map"
`;

exports[`packem node exports > should output 'default export' correctly > mjs output 1`] = `
"const test = "this should be in final bundle";

export { test as default };
"
`;

exports[`packem node exports > should output 'default export' correctly > cjs output 1`] = `
"const test = "this should be in final bundle";

module.exports = test;
"
`;

exports[`packem node exports > should output 'default export' for nested folder correctly > mjs output 1`] = `
"const test = "this should be in final bundle";

export { test as default };
"
`;

exports[`packem node exports > should output 'default export' for nested folder correctly > cjs output 1`] = `
"const test = "this should be in final bundle";

module.exports = test;
"
`;
